[tool.poetry]
name = "tier-analysis"
version = "0.1.0"
description = ""
authors = ["J David Smith <emallson@emallson.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.0"
plotnine = "^0.8.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
